# app/Http/Controllers/Api/V1/GuestController.php
@@ -22,9 +22,9 @@ use Illuminate\Foundation\Auth\SendsPasswordResetEmails;
 
 class GuestController extends ApiController
 {
-    use SendsPasswordResetEmails;
+    // use SendsPasswordResetEmails;
     use VerifiesEmails;
-    use ResetsPasswords;
+    // use ResetsPasswords;
 
     
     protected $userRepository;
@@ -374,141 +374,6 @@ class GuestController extends ApiController
         }
     }
 
-    /**
-     * @OA\Post(
-     *      path="/api/v1/guest/password/email",
-     *      operationId="resetLinkEmail",
-     *      summary="send reset link",
-     *      description="Send user reset password email",
-     *      tags={"Guest"},
-     *      @OA\RequestBody(
-     *          required=true,
-     *          @OA\JsonContent(
-     *              @OA\Property(
-     *                  property="email",
-     *                  type="string",
-     *                  example="user@user.com",
-     *              )
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *      ),
-     *      @OA\Response(
-     *          response=400,
-     *          description="Bad Request"
-     *      ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     * )
-     */
-    public function resetLinkEmail(Request $request){
-        try {
-            $request->validate([
-                'email' => 'required|email',
-            ]);
-            $user = $this->userRepository->findUserByEmail($request->email);
-            
-            if(!$user){
-                $this->response['message'] = "No account associated with this email was found.";
-                return $this->respondWithError($this->response);
-            }
-
-            $response = $this->broker()->sendResetLink(
-                $this->credentials($request)
-            );
-
-            if($response == Password::RESET_LINK_SENT){
-                $this->response['message'] = trans($response);
-                return $this->respondWithSuccess($this->response);
-            }
-            else {
-                $this->response['message'] = trans($response);
-                return $this->respondWithError($this->response);    
-            }
-        } catch (Exception $e) {
-            $this->response['message'] = $e->getMessage();
-            return $this->respondWithError($this->response);
-        }
-    }
-
-    /**
-     * @OA\Post(
-     *      path="/api/v1/guest/password/reset",
-     *      operationId="resetPassword",
-     *      summary="Reset password",
-     *      description="Reset password",
-     *      tags={"Guest"},
-     *      @OA\RequestBody(
-     *          required=true,
-     *          @OA\JsonContent(
-     *              @OA\Property(
-     *                  property="email",
-     *                  type="string",
-     *                  example="user@user.com",
-     *              ),
-     *              @OA\Property(
-     *                  property="password",
-     *                  type="password",
-     *                  example="password",
-     *              ),
-     *              @OA\Property(
-     *                  property="token",
-     *                  type="string",
-     *                  example="sadfalskdjflaksjdfiasjfdioasdofjewruopweur",
-     *              )
-     *          )
-     *      ),
-     *      @OA\Response(
-     *          response=200,
-     *          description="Successful operation",
-     *      ),
-     *      @OA\Response(
-     *          response=400,
-     *          description="Bad Request"
-     *      ),
-     *      @OA\Response(
-     *          response=401,
-     *          description="Unauthenticated",
-     *      ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     * )
-     */
-    public function reset(Request $request){
-        try {
-            $request->validate([
-                'token' => 'required',
-                'email' => 'required|email',
-                'password' => 'required|min:8',
-            ]);
-
-            $response = $this->broker()->reset(
-                $this->credentials($request), function($user, $password){
-                    $this->resetPassword($user, $password);
-                }
-            );
-    
-            $this->response['message'] = $response;
-
-            return $response == Password::PASSWORD_RESET 
-                    ? $this->respondWithSuccess($this->response)
-                    : $this->respondWithError($this->response);
-
-        } catch (Exception $e) {
-            $this->response['message'] = $e->getMessage();
-            return $this->respondWithError($this->response);
-        }
-    }
 
     protected function generateVerificationToken(){
         return \Str::random(32);
