# storage/api-docs/api-docs.json
@@ -241,6 +241,46 @@
                 ]
             }
         },
+        "/api/v1/guest/password/forgot": {
+            "post": {
+                "tags": [
+                    "Guest"
+                ],
+                "summary": "send reset link",
+                "description": "Send user reset password email",
+                "operationId": "resetLinkEmail",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "example": "user@user.com"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/v1/guest/register": {
             "post": {
                 "tags": [
@@ -432,46 +472,6 @@
                     },
                     "400": {
                         "description": "Bad Request"
-                    },
-                    "403": {
-                        "description": "Forbidden"
-                    }
-                }
-            }
-        },
-        "/api/v1/guest/password/email": {
-            "post": {
-                "tags": [
-                    "Guest"
-                ],
-                "summary": "send reset link",
-                "description": "Send user reset password email",
-                "operationId": "resetLinkEmail",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "properties": {
-                                    "email": {
-                                        "type": "string",
-                                        "example": "user@user.com"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "Successful operation"
-                    },
-                    "400": {
-                        "description": "Bad Request"
-                    },
-                    "401": {
-                        "description": "Unauthenticated"
                     },
                     "403": {
                         "description": "Forbidden"
